# notepad-plus-plus

./: .gitignore  BUILD_PROGRESS.md  CLAUDE.md  GAP_ANALYSIS.md  PORTING_PROGRESS.md  README.md  REMAINING_WORK.md  RESTART_PROMPT.md  TAB_SWITCHING_DEBUG_LOG.md  TAB_SWITCHING_DEBUG_QUICKREF.md  TEST_PROGRESS.md  debug_tab_switch.sh  docker-compose.yml
PowerEditor/src/: CMakeLists.txt  EXCLUDED_FILES_LINUX.md  Notepad_plus.cpp  Notepad_plus.h  Notepad_plus_Window.h  NppDarkMode.h  NppPluginMessages.cpp  NppXml.h  Parameters.h  dpiManagerV2.h  lesDlgs.h  localization.h  main_linux.cpp
PowerEditor/src/MISC/Common/: Common.h  FileInterface.h  LinuxTypes.h  NppConstants.h  Sorters.h  WindowsTypes.h
PowerEditor/src/MISC/PluginsManager/: Notepad_plus_msgs.h  PluginsManager.h
PowerEditor/src/MISC/md5/: md5Dlgs.h
PowerEditor/src/MISC/sha512/: sha512.h
PowerEditor/src/Platform/: Clipboard.h  Dialogs.h  FileSystem.h  FileWatcher.h  Process.h  Settings.h  Threading.h
PowerEditor/src/Platform/KDE/: KDEDialogs.cpp  KDEDialogs.h
PowerEditor/src/Platform/Linux/: Clipboard.cpp  Dialogs.cpp  FileSystem.cpp  FileWatcher.cpp  Process.cpp  Settings.cpp  Threading.cpp
PowerEditor/src/Platform/Windows/: Clipboard.cpp  Dialogs.cpp  FileSystem.cpp  FileWatcher.cpp  Process.cpp  Settings.cpp  Threading.cpp
PowerEditor/src/QtControls/: CMakeLists.txt  Notepad_plus.cpp
PowerEditor/src/QtControls/AboutDlg/: AboutDlg.cpp  AboutDlg.h  CmdLineArgsDlg.cpp  CmdLineArgsDlg.h  DebugInfoDlg.cpp  DebugInfoDlg.h
PowerEditor/src/QtControls/ClipboardHistory/: ClipboardHistoryPanel.cpp  ClipboardHistoryPanel.h
PowerEditor/src/QtControls/ColumnEditor/: ColumnEditorDlg.cpp  ColumnEditorDlg.h
PowerEditor/src/QtControls/ContextMenu/: ContextMenu.cpp  ContextMenu.h
PowerEditor/src/QtControls/DocTabView/: DocTabView.cpp  DocTabView.h
PowerEditor/src/QtControls/DockingManager/: DockingManager.cpp  DockingManager.h
PowerEditor/src/QtControls/DocumentMap/: DocumentMap.cpp  DocumentMap.h
PowerEditor/src/QtControls/FileBrowser/: FileBrowser.cpp  FileBrowser.h
PowerEditor/src/QtControls/FindCharsInRange/: FindCharsInRangeDlg.cpp  FindCharsInRangeDlg.h
PowerEditor/src/QtControls/FindReplace/: FindReplaceDlg.cpp  FindReplaceDlg.h
PowerEditor/src/QtControls/FunctionList/: FunctionListPanel.cpp  FunctionListPanel.h
PowerEditor/src/QtControls/GoToLine/: GoToLineDlg.cpp  GoToLineDlg.h
PowerEditor/src/QtControls/HashDlgs/: HashFromFilesDlg.cpp  HashFromFilesDlg.h  HashFromTextDlg.cpp  HashFromTextDlg.h  HashType.h
PowerEditor/src/QtControls/KDEStyle/: KDEStyleManager.cpp  KDEStyleManager.h  KDEUtils.cpp
PowerEditor/src/QtControls/ListView/: ListView.cpp  ListView.h
PowerEditor/src/QtControls/MainWindow/: Notepad_plus_Window.cpp  Notepad_plus_Window.h  Notepad_plus_Window_RunMenu.cpp
PowerEditor/src/QtControls/PluginsAdmin/: PluginViewList.cpp  PluginViewList.h  PluginsAdminDlg.cpp  PluginsAdminDlg.h
PowerEditor/src/QtControls/Preference/: preferenceDlg.cpp  preferenceDlg.h
PowerEditor/src/QtControls/ProjectPanel/: ProjectPanel.cpp  ProjectPanel.h
PowerEditor/src/QtControls/RunDlg/: RunDlg.cpp  RunDlg.h
PowerEditor/src/QtControls/RunMacroDlg/: RunMacroDlg.cpp  RunMacroDlg.h
PowerEditor/src/QtControls/Shortcut/: Shortcut.h
PowerEditor/src/QtControls/ShortcutMapper/: ShortcutMapper.cpp  ShortcutMapper.h
PowerEditor/src/QtControls/SmartHighlighter/: SmartHighlighter.cpp
PowerEditor/src/QtControls/Splitter/: Splitter.cpp  Splitter.h
PowerEditor/src/QtControls/StaticDialog/: StaticDialog.cpp  StaticDialog.h
PowerEditor/src/QtControls/TabBar/: TabBar.cpp  TabBar.h
PowerEditor/src/QtControls/ToolBar/: ToolBar.cpp  ToolBar.h
PowerEditor/src/QtControls/TreeView/: TreeView.cpp  TreeView.h
PowerEditor/src/QtControls/UserDefineDialog/: UserDefineDialog.cpp  UserDefineDialog.h
PowerEditor/src/QtControls/WindowsDlg/: WindowsDlg.cpp  WindowsDlg.h
PowerEditor/src/QtControls/WordStyleDlg/: WordStyleDlg.cpp  WordStyleDlg.h
PowerEditor/src/QtCore/: AutoCompletionQt.cpp  Buffer.cpp  Buffer.h  FunctionCallTipQt.cpp  NativeLangSpeaker.cpp  NppCommands.cpp  NppCommands.h  NppDarkMode.cpp  NppIO.cpp  Parameters.cpp  ScintillaEditViewQt.cpp
PowerEditor/src/ScintillaComponent/: AutoCompletion.h  FunctionCallTip.h  ScintillaCtrls.h  ScintillaEditView.h  SmartHighlighter.h  UserDefineDialog.h  columnEditor.h  xmlMatchedTagsHighlighter.cpp
PowerEditor/src/Tests/: CMakeLists.txt  README.md  run_tests.py  run_tests.sh.in
PowerEditor/src/Tests/Common/: TestMain.cpp  TestMainIntegration.cpp  TestMainQtControls.cpp  TestUtils.cpp  TestUtils.h
PowerEditor/src/Tests/Integration/: BufferTest.cpp  BufferTest.h  CommandTest.cpp  CommandTest.h  FindReplaceDlgInitTest.cpp  FindReplaceDlgInitTest.h  IOTest.cpp  IOTest.h  IPCParseTest.cpp  IPCParseTest.h  MainWindowTest.cpp  MainWindowTest.h  Phase5RegressionTest.cpp  Phase5RegressionTest.h  Phase6FinalGapRegressionTest.cpp  Phase6FinalGapRegressionTest.h  Phase7TodoCleanupTest.cpp  Phase7TodoCleanupTest.h
PowerEditor/src/Tests/Platform/: ClipboardTest.cpp  ClipboardTest.h  DialogsTest.cpp  DialogsTest.h  FileSystemTest.cpp  FileSystemTest.h  FileWatcherTest.cpp  FileWatcherTest.h  ProcessTest.cpp  ProcessTest.h  SettingsTest.cpp  SettingsTest.h
PowerEditor/src/Tests/QtControls/: AboutDlgTest.cpp  AboutDlgTest.h  DockingManagerTest.cpp  DockingManagerTest.h  FindReplaceDlgTest.cpp  FindReplaceDlgTest.h  GoToLineDlgTest.cpp  GoToLineDlgTest.h  ListViewTest.cpp  ListViewTest.h  PreferenceDlgTest.cpp  PreferenceDlgTest.h  PreferenceSubPageTest.cpp  PreferenceSubPageTest.h  RunDlgTest.cpp  RunDlgTest.h  ShortcutMapperTest.cpp  ShortcutMapperTest.h  StaticDialogTest.cpp  StaticDialogTest.h  TabSignalRaceTest.cpp  TabSignalRaceTest.h  ToolBarTest.cpp  ToolBarTest.h  TreeViewTest.cpp  TreeViewTest.h  WindowTest.cpp  WindowTest.h
PowerEditor/src/TinyXml/: tinyxml.h
PowerEditor/src/WinControls/: Window.h
PowerEditor/src/WinControls/AboutDlg/: URLCtrl.h
PowerEditor/src/WinControls/AnsiCharPanel/: ListView.h  ansiCharPanel.h
ci/: README.md
(+95 files in other folders)
